🚀 Tweaks to deploy

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-ARBITRUM_RPC_URL = 'https://rpc.ankr.com/arbitrum'
+ARBITRUM_RPC_URL = 'https://arb1.croswap.com/rpc'
 GOERLI_RPC_URL = 'https://rpc.ankr.com/arbitrum'
