--- a/foundry.toml
+++ b/foundry.toml
@@ -1,15 +1,36 @@
 [profile.default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-optimizer = true
-fs_permissions = [{ access = "read", path = "./"}]
+src             = 'src'                                 # The source directory
+out             = 'out'                                 # The output directory
+libs            = ['lib']                               # A list of library directories
+optimizer       = true                                  # Enable or disable the solc optimizer
+optimizer_runs  = 200                                   # The number of optimizer runs
+fs_permissions  = [{ access = "read", path = "./"}]     # Gives permission to read files for deployment keys.
+
+[fuzz]
+runs           = 100        # The number of times to run the fuzzing tests
 
 [invariant]
-fail_on_revert = true
+runs           = 5          # The number of calls to make in the invariant tests
+depth          = 10         # The number of times to run the invariant tests
+fail_on_revert = true       # Fail the test if the contract reverts
+
+[profile.shallow.fuzz]
+runs           = 20         # The number of times to run the fuzzing tests
+
+[profile.deep.fuzz]
+runs           = 150        # The number of times to run the fuzzing tests
+
+[profile.deep.invariant]
+runs           = 10         # The number of times to run the invariant tests
+depth          = 15         # The number of calls to make in the invariant tests
+
+[profile.super_deep.fuzz]
+runs           = 500        # The number of times to run the fuzzing tests
+
+[profile.super_deep.invariant]
+runs           = 15         # The number of calls to make in the invariant tests
+depth          = 40         # The number of times to run the invariant tests
 
 [rpc_endpoints]
 arbitrum = "${ARBITRUM_RPC_URL}"
 goerli = "${GOERLI_RPC_URL}"
-
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
