--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 ARBITRUM_RPC_URL = 'https://arb1.croswap.com/rpc'
-GOERLI_RPC_URL = 'https://arbitrum-goerli.publicnode.com'
+SEPOLIA_RPC_URL = 'https://arbitrum-sepolia.blockpi.network/v1/rpc/public'
 DEPLOYER_PRIVATE_KEY = ''
